tests/data/errors/indentation/input.py
y = 2

def f():
	z = 2
    x = "906"

m()
